fixed minor layout bugs Issue #OPUSVIER-1977 - Browsing Änderungen bzgl. Schriftenreihen
git-svn-id: https://svn.zib.de/opus4dev/server/trunk@9892 0a49f362-4213-0410-86e3-e96cb6c4fbae

--- a/public/layouts/opus4/css/opus.css
+++ b/public/layouts/opus4/css/opus.css
@@ -810,8 +810,7 @@ dl.result_box {
     border-top: 1px solid #e2e6e9;
 }
 .result_box .results_title{
-	background-image: url(../img/theme/icon-title.gif);
-        padding-right: 75px!important;
+	background-image: url(../img/theme/icon-title.gif);        
 }
 .results_title a{
 	font-weight: bold;
@@ -820,13 +819,15 @@ dl.result_box {
 	padding-bottom: 5px;
 	background-image: url(../img/theme/icon-author.gif);
 }
+.results_seriesnumber + .results_title {
+        padding-right: 75px!important;
+}
 .result_box .results_seriesnumber {
         float: right;
         text-align: right;
         min-width: 50px;
-        padding: 4px 8px 4px 12px;
-        color: #26517D;        
-        font-style: italic;
+        padding: 4px 8px 0px 12px;
+        color: black;        
 }
 .result_box dd{
 	padding: 3px 6px;
